# openet-sims

./: .gitignore  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  validation.ipynb
.github/workflows/: build.yml
examples/: collection_interpolate.ipynb  collection_overpass.ipynb  image_mapping.ipynb  interpolate_test.ipynb  single_image.ipynb  single_image_br.ipynb
openet/: README.md
openet/sims/: __init__.py  ag_test_collection.py  ag_test_image.py  collection.py  crop_kc.py  data.py  image.py  interpolate.py  model.py  test_a_utils.py  test_b_crop_kc.py  test_b_data.py  test_b_model.py  test_c_image.py  test_collection.py  test_d_collection.py  test_image.py  test_model.py  test_utils.py  utils.py
openet/sims/tests/: conftest.py  ee_wb_valid.csv  test_a_utils.py  test_b_data.py  test_b_model.py  test_c_image.py  test_d_collection.py  test_d_interpolate.py
